--- a/.github/workflows/recon.yml
+++ b/.github/workflows/recon.yml
@@ -1,9 +1,12 @@
 name: Reconnaissance
 
 on:
-  push:
-    branches: [ master ]
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      target_domain:
+        description: "Domain yang ingin discan (contoh: example.com)"
+        required: true
+        default: "example.com"
 
 permissions:
   contents: write
@@ -57,38 +60,33 @@ jobs:
         run: |
           nuclei -update-templates
 
-      - name: Subdomain Enumeration & Vulnerability Scan
+      - name: Subdomain Enumeration & FULL Scan
         run: |
           set -e
           TARGET="detik.com"
           TODAY=$(date +%F)
-          mkdir -p Detik
+          mkdir -p Recon
 
+          echo "[*] Target: $TARGET"
           echo "[*] Finding subdomains..."
           subfinder -d $TARGET -silent > sub1.txt
-          assetfinder --subs-only $TARGET | grep "\.${TARGET}$" > sub2.txt
-          cat sub1.txt sub2.txt | sort -u > Detik/detik.txt
-          echo "[+] Total subdomains: $(wc -l < Detik/detik.txt)"
+          assetfinder --subs-only $TARGET | grep "\\.${TARGET}$" > sub2.txt
+          cat sub1.txt sub2.txt | sort -u > Recon/all-subdomains.txt
+          echo "[+] Total subdomains: $(wc -l < Recon/all-subdomains.txt)"
 
-          echo "[*] Probing live hosts..."
-          cat Detik/detik.txt | httpx \
-            -silent \
-            -status-code -title -tech-detect -web-server -ip \
-            -o Detik/subdomains-detik-live.txt
+          echo "[*] Resolving DNS (tanpa filter)..."
+          cat Recon/all-subdomains.txt | dnsx -silent -a -cname -resp > Recon/resolved-subdomains.txt
 
-          echo "[*] Resolving DNS..."
-          cat Detik/subdomains-detik-live.txt | awk '{print $1}' | dnsx \
-            -silent -a -cname -resp \
-            -o Detik/detik-resolved.txt
-
-          echo "[*] Running nuclei scan..."
-          cat Detik/detik-resolved.txt | awk '{print $1}' | sort -u | nuclei \
-            -as \
+          echo "[*] Running nuclei scan on ALL subdomains..."
+          cat Recon/resolved-subdomains.txt | awk '{print $1}' | sort -u | nuclei \
             -stats \
-            -o Detik/detik-live-urls-$TODAY.txt
+            -rate-limit 50 \
+            -c 50 \
+            -timeout 10 \
+            -o Recon/nuclei-results-$TODAY.txt
 
-          echo "✅ Recon selesai. File hasil:"
-          echo "Detik/detik-live-urls-$TODAY.txt"
+          echo "✅ Scan selesai"
+          echo "Output file: Recon/nuclei-results-$TODAY.txt"
 
       - name: Configure Git
         run: |
@@ -97,6 +95,6 @@ jobs:
 
       - name: Commit and Push Results
         run: |
-          git add Detik/
+          git add Recon/
           git commit -m "Recon result $(date -u)" || echo "Nothing to commit"
           git push
